--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@maboiteaspam/ssh-host-parse",
     "version": "1.0.0",
-    "description": "parse ssho host like user@host:port",
+    "description": "parse ssh host like user@host:port",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
